arrange circles horizontally and breakdown next to map

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <!-- To-Do:
 
+	circle hover effect
+	fill effect
+	correct colors
 	Image alt tags
 	Click here to toggle by player
 	Fill out players.js
@@ -75,108 +78,100 @@
 			</div>
 			<hr class="featurette-divider">
 			<div class="sub-container">
+				<p class="title section-title">click to add or remove a layer</p>
+				<ul class="circles">
+					<li class="wow rollIn animated" data-wow-delay="4.25s">
+						<div class="outer-circle" data-name="Jose Bautista">
+							<div class="inner-circle">
+								<div class="circle-text">Jose Bautista</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="4s">
+						<div class="outer-circle" data-name="Troy Tulowitzki">
+							<div class="inner-circle">
+								<div class="circle-text">Troy Tulowitzki</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="3.75s">
+						<div class="outer-circle" data-name="Yoenis Cespedes">
+							<div class="inner-circle">
+								<div class="circle-text">Yoenis Cespedes</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="3.5s">
+						<div class="outer-circle" data-name="Giancarlo Stanton">
+							<div class="inner-circle">
+								<div class="circle-text">Giancarlo Stanton</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="3.25s">
+						<div class="outer-circle" data-name="Adam Jones">
+							<div class="inner-circle">
+								<div class="circle-text">Adam<br>Jones</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="3s">
+						<div class="outer-circle" data-name="Yasiel Puig">
+							<div class="inner-circle">
+								<div class="circle-text">Yasiel<br>Puig</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="2.75s">
+						<div class="outer-circle" data-name="Brian Dozier">
+							<div class="inner-circle">
+								<div class="circle-text">Brian<br>Dozier</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="2.5s">
+						<div class="outer-circle" data-name="Todd Frazier">
+							<div class="inner-circle">
+								<div class="circle-text">Todd<br>Frazier</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="2.25s">
+						<div class="outer-circle" data-name="Josh Donaldson">
+							<div class="inner-circle">
+								<div class="circle-text">Josh Donaldson</div>
+							</div>
+						</div>
+					</li>
+					<li class="wow rollIn animated" data-wow-delay="2s">
+						<div class="outer-circle" data-name="Justin Morneau">
+							<div class="inner-circle">
+								<div class="circle-text">Justin Morneau</div>
+							</div>
+						</div>
+					</li>
+				</ul>
 				<div class="map-container">
 					<div id="map"></div>
 					<button class="restore btn btn-default">Restore</button>
 				</div>
-				<div class="circles-container">
-					<ul class="circles">
-						<li>
-							<div class="outer-circle" data-name="Jose Bautista">
-								<div class="inner-circle">
-									<div class="circle-text">Jose Bautista</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Troy Tulowitzki">
-								<div class="inner-circle">
-									<div class="circle-text">Troy Tulowitzki</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Yoenis Cespedes">
-								<div class="inner-circle">
-									<div class="circle-text">Yoenis Cespedes</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Giancarlo Stanton">
-								<div class="inner-circle">
-									<div class="circle-text">Giancarlo Stanton</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Adam Jones">
-								<div class="inner-circle">
-									<div class="circle-text">Adam<br>Jones</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Yasiel Puig">
-								<div class="inner-circle">
-									<div class="circle-text">Yasiel<br>Puig</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Brian Dozier">
-								<div class="inner-circle">
-									<div class="circle-text">Brian<br>Dozier</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Todd Frazier">
-								<div class="inner-circle">
-									<div class="circle-text">Tood<br>Frazier</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Josh Donaldson">
-								<div class="inner-circle">
-									<div class="circle-text">Josh Donaldson</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="outer-circle" data-name="Justin Morneau">
-								<div class="inner-circle">
-									<div class="circle-text">Justin Morneau</div>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<hr class="featurette-divider">
-			<div class="sub-container">
-				<h4 class="title section-title">Breakdown by section</h4>
-				<p class="description">(scroll for more data)</p>
-				<div class="breakdown">
-					<table class="table">
-						<thead>
-							<tr class="header-row">
-								<th></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr class="price-row">
-								<th>Price</th>
-							</tr>
-							<tr class="hr-row">
-								<th>HRs</th>
-							</tr>
-							<tr class="cost-row">
-								<th>HR cost</th>
-							</tr>
-						</tbody>
-					</table>
+				<div class="breakdown-container">
+					<div class="breakdown">
+						<h4 class="title section-title">Breakdown by section</h4>
+						<p class="description">(scroll for more data)</p>
+						<table class="table table-striped tablesorter">
+							<thead>
+								<tr>
+									<th class="section-header">Section</th>
+									<th>Price</th>
+									<th>HRs</th>
+									<th>HR cost</th>
+								</tr>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
