--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 
 <!-- To-Do:
 
-	circle hover effect
-	fill effect
-	correct colors
-	Image alt tags
-	Click here to toggle by player
-	Fill out players.js
-	Fill out sections.js
-	Make two new player cards
-	Animate map
+	1. Make new player cards
+	2. Add tooltip
+	3. Add circle hover and fill effects
+	4. Add image alt tags
+	5. Animate map
+	6. Fill in section data
+	7. Check for new home runs
+	8. Explain the process
 
 -->
 
@@ -24,7 +23,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./leaflet.css">
 		<link rel="stylesheet" href="./slick/slick.css">
-		<link rel="stylesheet" href="./animate.css">
+		<!-- <link rel="stylesheet" href="./animate.css"> -->
 		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
@@ -34,7 +33,7 @@
 		</div>
 		<div class="container">
 			<div class="sub-container">
-				<div class="player-container wow fadeInLeft animated" data-wow-duration="2s">
+				<div class="player-container wow bounceInLeft animated" data-wow-duration="2s">
 					<h3 class="title section-title al">American League</h3>
 					<div class="player">
 						<img src="./images/bautista_card.jpg">
@@ -56,7 +55,7 @@
 				<div class="vs">
 					<img src="./images/vs.png">
 				</div>
-				<div class="player-container wow fadeInRight animated" data-wow-duration="2s">
+				<div class="player-container wow bounceInRight animated" data-wow-duration="2s">
 					<h3 class="title section-title nl">National League</h3>
 					<div class="player">
 						<img src="./images/tulowitzki_card.jpg">
@@ -81,96 +80,100 @@
 				<p class="title section-title">click to add or remove a layer</p>
 				<ul class="circles">
 					<li class="wow rollIn animated" data-wow-delay="4.25s">
-						<div class="outer-circle" data-name="Jose Bautista">
-							<div class="inner-circle">
+						<div class="outer-circle" id="bautista" data-name="Jose Bautista">
+							<div class="inner-circle" id="bautista">
 								<div class="circle-text">Jose Bautista</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="4s">
-						<div class="outer-circle" data-name="Troy Tulowitzki">
-							<div class="inner-circle">
+						<div class="outer-circle" id="tulowitzki" data-name="Troy Tulowitzki">
+							<div class="inner-circle" id="tulowitzki">
 								<div class="circle-text">Troy Tulowitzki</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.75s">
-						<div class="outer-circle" data-name="Yoenis Cespedes">
-							<div class="inner-circle">
+						<div class="outer-circle" id="cespedes" data-name="Yoenis Cespedes">
+							<div class="inner-circle" id="cespedes">
 								<div class="circle-text">Yoenis Cespedes</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.5s">
-						<div class="outer-circle" data-name="Giancarlo Stanton">
-							<div class="inner-circle">
+						<div class="outer-circle" id="stanton" data-name="Giancarlo Stanton">
+							<div class="inner-circle" id="stanton">
 								<div class="circle-text">Giancarlo Stanton</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.25s">
-						<div class="outer-circle" data-name="Adam Jones">
-							<div class="inner-circle">
+						<div class="outer-circle" id="jones" data-name="Adam Jones">
+							<div class="inner-circle" id="jones">
 								<div class="circle-text">Adam<br>Jones</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3s">
-						<div class="outer-circle" data-name="Yasiel Puig">
-							<div class="inner-circle">
+						<div class="outer-circle" id="puig" data-name="Yasiel Puig">
+							<div class="inner-circle" id="puig">
 								<div class="circle-text">Yasiel<br>Puig</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.75s">
-						<div class="outer-circle" data-name="Brian Dozier">
-							<div class="inner-circle">
+						<div class="outer-circle" id="dozier" data-name="Brian Dozier">
+							<div class="inner-circle" id="dozier">
 								<div class="circle-text">Brian<br>Dozier</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.5s">
-						<div class="outer-circle" data-name="Todd Frazier">
-							<div class="inner-circle">
+						<div class="outer-circle" id="frazier" data-name="Todd Frazier">
+							<div class="inner-circle" id="frazier">
 								<div class="circle-text">Todd<br>Frazier</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.25s">
-						<div class="outer-circle" data-name="Josh Donaldson">
-							<div class="inner-circle">
+						<div class="outer-circle" id="donaldson" data-name="Josh Donaldson">
+							<div class="inner-circle" id="donaldson">
 								<div class="circle-text">Josh Donaldson</div>
 							</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2s">
-						<div class="outer-circle" data-name="Justin Morneau">
-							<div class="inner-circle">
+						<div class="outer-circle" id="morneau" data-name="Justin Morneau">
+							<div class="inner-circle" id="morneau">
 								<div class="circle-text">Justin Morneau</div>
 							</div>
 						</div>
 					</li>
 				</ul>
-				<div class="map-container">
+				<div class="map-container wow fadeInLeft animated" data-wow-duration="3s">
 					<div id="map"></div>
 					<button class="restore btn btn-default">Restore</button>
 				</div>
-				<div class="breakdown-container">
+				<div class="breakdown-container wow fadeInRight animated" data-wow-duration="3s">
 					<div class="breakdown">
-						<h4 class="title section-title">Breakdown by section</h4>
-						<p class="description">(scroll for more data)</p>
-						<table class="table table-striped tablesorter">
-							<thead>
-								<tr>
-									<th class="section-header">Section</th>
-									<th>Price</th>
-									<th>HRs</th>
-									<th>HR cost</th>
-								</tr>
-							</thead>
-							<tbody>
-							</tbody>
-						</table>
+						<div class="breakdown-header">
+							<h4 class="title section-title">Breakdown by section</h4>
+							<p class="description">(scroll for more data)</p>
+						</div>
+						<div class="breakdown-body">
+							<table class="table table-striped tablesorter">
+								<thead>
+									<tr>
+										<th class="section-header">Section</th>
+										<th>Price</th>
+										<th>HRs</th>
+										<th>HR cost</th>
+									</tr>
+								</thead>
+								<tbody>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
