color-code circles

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 	1. Make new player cards
 	2. Add tooltip
-	3. Add circle hover and fill effects
-	4. Add image alt tags
-	5. Animate map
-	6. Fill in section data
-	7. Check for new home runs
-	8. Explain the process
+	3. Add image alt tags
+	4. Fill in section data
+	5. Add overall data
+	6. Check for new home runs
+	7. Explain the process
+	8. 	Animate map
 
 -->
 
@@ -80,73 +80,53 @@
 				<p class="title section-title">click to add or remove a layer</p>
 				<ul class="circles">
 					<li class="wow rollIn animated" data-wow-delay="4.25s">
-						<div class="outer-circle" id="bautista" data-name="Jose Bautista">
-							<div class="inner-circle" id="bautista">
-								<div class="circle-text">Jose Bautista</div>
-							</div>
+						<div class="circle" id="bautista" data-name="Jose Bautista">
+							<div class="circle-text">Jose Bautista</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="4s">
-						<div class="outer-circle" id="tulowitzki" data-name="Troy Tulowitzki">
-							<div class="inner-circle" id="tulowitzki">
-								<div class="circle-text">Troy Tulowitzki</div>
-							</div>
+						<div class="circle" id="tulowitzki" data-name="Troy Tulowitzki">
+							<div class="circle-text">Troy Tulowitzki</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.75s">
-						<div class="outer-circle" id="cespedes" data-name="Yoenis Cespedes">
-							<div class="inner-circle" id="cespedes">
-								<div class="circle-text">Yoenis Cespedes</div>
-							</div>
+						<div class="circle" id="cespedes" data-name="Yoenis Cespedes">
+							<div class="circle-text">Yoenis Cespedes</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.5s">
-						<div class="outer-circle" id="stanton" data-name="Giancarlo Stanton">
-							<div class="inner-circle" id="stanton">
-								<div class="circle-text">Giancarlo Stanton</div>
-							</div>
+						<div class="circle" id="stanton" data-name="Giancarlo Stanton">
+							<div class="circle-text">Giancarlo Stanton</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3.25s">
-						<div class="outer-circle" id="jones" data-name="Adam Jones">
-							<div class="inner-circle" id="jones">
-								<div class="circle-text">Adam<br>Jones</div>
-							</div>
+						<div class="circle" id="jones" data-name="Adam Jones">
+							<div class="circle-text">Adam<br>Jones</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="3s">
-						<div class="outer-circle" id="puig" data-name="Yasiel Puig">
-							<div class="inner-circle" id="puig">
-								<div class="circle-text">Yasiel<br>Puig</div>
-							</div>
+						<div class="circle" id="puig" data-name="Yasiel Puig">
+							<div class="circle-text">Yasiel<br>Puig</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.75s">
-						<div class="outer-circle" id="dozier" data-name="Brian Dozier">
-							<div class="inner-circle" id="dozier">
-								<div class="circle-text">Brian<br>Dozier</div>
-							</div>
+						<div class="circle" id="dozier" data-name="Brian Dozier">
+							<div class="circle-text">Brian<br>Dozier</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.5s">
-						<div class="outer-circle" id="frazier" data-name="Todd Frazier">
-							<div class="inner-circle" id="frazier">
-								<div class="circle-text">Todd<br>Frazier</div>
-							</div>
+						<div class="circle" id="frazier" data-name="Todd Frazier">
+							<div class="circle-text">Todd<br>Frazier</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2.25s">
-						<div class="outer-circle" id="donaldson" data-name="Josh Donaldson">
-							<div class="inner-circle" id="donaldson">
-								<div class="circle-text">Josh Donaldson</div>
-							</div>
+						<div class="circle" id="donaldson" data-name="Josh Donaldson">
+							<div class="circle-text">Josh Donaldson</div>
 						</div>
 					</li>
 					<li class="wow rollIn animated" data-wow-delay="2s">
-						<div class="outer-circle" id="morneau" data-name="Justin Morneau">
-							<div class="inner-circle" id="morneau">
-								<div class="circle-text">Justin Morneau</div>
-							</div>
+						<div class="circle" id="morneau" data-name="Justin Morneau">
+							<div class="circle-text">Justin Morneau</div>
 						</div>
 					</li>
 				</ul>
