separate js and css from html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<title>2014 Home Run Derby</title>
 		<link rel="shortcut icon" href="https://seatgeek.com/favicon.ico">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="./leaflet.css">
+		<link rel="stylesheet" href="./css/leaflet.css">
 		<link rel="stylesheet" href="./slick/slick.css">
-		<link rel="stylesheet" href="./animate.css">
-		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./css/animate.css">
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 		<div id="header">
@@ -168,18 +168,18 @@
 			</div>
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="./wow.min.js"></script>
+		<script src="./js/wow.min.js"></script>
 		<script>
 			new WOW().init();
 		</script>
 		<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
-		<script src="./leaflet.js"></script>
-		<script src="./tablesorter.js"></script>
-		<script src="./underscore-min.js"></script>
+		<script src="./js/leaflet.js"></script>
+		<script src="./js/tablesorter.js"></script>
+		<script src="./js/underscore-min.js"></script>
 		<script src="./slick/slick.min.js"></script>
-		<script src="./sections.js"></script>
-		<script src="./players.js"></script>
-		<script src="./paths.js"></script>
-		<script src="./main.js"></script>
+		<script src="./js/sections.js"></script>
+		<script src="./js/players.js"></script>
+		<script src="./js/paths.js"></script>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
