--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 
 <!-- To-Do:
 
-	1. Crunch numbers in Excel spreadsheet
-	2. Add section data to json
-	3. Add overall data
-	4. Explain the process
+	1. Explain the process
 
 	Bonus: 
 	1. Show distance on tooltip
@@ -143,6 +140,20 @@
 					<button class="restore btn btn-default">Restore</button>
 				</div>
 				<div class="breakdown-container wow fadeInRight animated" data-wow-duration="3s">
+					<div class="stats">
+						<div class="stat">
+							<h3 class="num">166</h3>
+							<p>HRs hit by participants in 2014</p>
+						</div>
+						<div class="stat">
+							<h3 class="num">139</h3>
+							<p>catchable HRs at Target Field</p>
+						</div>
+						<div class="stat">
+							<h3 class="num">68</h3>
+							<p>projected catchable HRs at HRD</p>
+						</div>
+					</div>
 					<div class="breakdown">
 						<div class="breakdown-header">
 							<h4 class="title section-title">Breakdown by section</h4>
