add toggle all button

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<hr class="featurette-divider">
 			<div class="sub-container">
 				<h3 class="title">Target Field Stadium Map</h3>
-				<p class="title section-title">click to add or remove a layer</p>
+				<p class="title section-title">click to add or remove a player</p>
 				<ul class="circles">
 					<li class="wow rollIn animated" data-wow-offset="40" data-wow-delay="1.8s">
 						<div class="circle" id="bautista" data-name="Jose Bautista">
@@ -129,6 +129,7 @@
 				<div class="map-container wow fadeInLeft animated" data-wow-duration="3s">
 					<div id="map"></div>
 					<button class="restore btn btn-default">Restore</button>
+					<button class="all btn btn-default">Toggle</button>
 					<div class="legend">
 						<p class="title">section colors</p>
 						<div>
