--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/leaflet.css">
 		<link rel="stylesheet" href="./slick/slick.css">
-		<link rel="stylesheet" href="./css/animate.css">
+		<!-- <link rel="stylesheet" href="./css/animate.css"> -->
 		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
