import Montserrat font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="./slick/slick.css">
 		<!-- <link rel="stylesheet" href="./css/animate.css"> -->
 		<link rel="stylesheet" href="./css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div id="header">
@@ -73,7 +74,7 @@
 			<hr class="featurette-divider">
 			<div class="sub-container">
 				<h3 class="title">Target Field Stadium Map</h3>
-				<p class="title section-title">click to add or remove a player</p>
+				<p class="title section-title">click a circle to add or remove a player or click toggle to add or remove them all</p>
 				<ul class="circles">
 					<li class="wow rollIn animated" data-wow-offset="40" data-wow-delay="1.8s">
 						<div class="circle" id="bautista" data-name="Jose Bautista">
@@ -140,6 +141,9 @@
 							<div class="patch worst"></div>
 							<p>worst $ per HR value</p>
 						</div>
+					</div>
+					<div class="credit">
+						<p>Home Run data pulled from ESPN's <a href="http://www.hittrackeronline.com/" target="_blank">Home Run Tracker</a></p>
 					</div>
 				</div>
 				<div class="breakdown-container wow fadeInRight animated" data-wow-duration="3s">
