update section ranks, prices, and home runs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/leaflet.css">
 		<link rel="stylesheet" href="./slick/slick.css">
-		<!-- <link rel="stylesheet" href="./css/animate.css"> -->
+		<link rel="stylesheet" href="./css/animate.css">
 		<link rel="stylesheet" href="./css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	</head>
@@ -153,12 +153,12 @@
 							<p>HRs hit by participants in 2014</p>
 						</div>
 						<div class="stat">
-							<h3 class="num">139</h3>
+							<h3 class="num">126</h3>
 							<p>catchable HRs at Target Field</p>
 						</div>
 						<div class="stat">
 							<h3 class="num">68</h3>
-							<p>projected catchable HRs at Home Run Derby</p>
+							<p>projected catchable HRs at derby</p>
 						</div>
 					</div>
 					<div class="breakdown">
