include graphics in primary navigation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
 		</div>
 		<div class="primary-nav">
 			<ul class="nav-list">
-				<a href="#homerun-map"><li>The Homeruns</li></a>
-				<a href="#player-bios"><li class="last">The Players</li></a>
+				<a href="#homerun-map">
+					<img class="icon" id="icon-ball" src="./images/ball.png">
+					<li>The Homeruns</li>
+				</a>
+				<a href="#player-bios">
+					<img class="icon" id="icon-cap" src="./images/cap.png">
+					<li class="last">The Players</li>
+				</a>
 			</ul>
 		</div>
 		<div class="container" id="homerun-map">
