--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="./css/leaflet.css">
 		<link rel="stylesheet" href="./slick/slick.css">
 		<link rel="stylesheet" href="./css/animate.css">
+		<link rel="stylesheet" href="./css/theme.default.css">
 		<link rel="stylesheet" href="./css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	</head>
@@ -217,7 +218,7 @@
 		</script>
 		<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
 		<script src="./js/leaflet.js"></script>
-		<script src="./js/tablesorter.js"></script>
+		<script src="./js/jquery.tablesorter.min.js"></script>
 		<script src="./js/underscore-min.js"></script>
 		<script src="./slick/slick.min.js"></script>
 		<script src="./js/sections.js"></script>
