update player cards through 7/13 and HR through 7/12

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 						<span>The Players</span>
 					</a>
 				</li>
-				<li class="nav-list-item">
+				<li class="nav-list-item nav-list-last">
 					<a href="#about">
 						<img class="icon" id="icon-about" src="./images/about.png">
-						<span class="last">About</span>
+						<span>About</span>
 					</a>
 				</li>
 			</ul>
@@ -120,7 +120,7 @@
 				<div class="breakdown-container wow fadeInRight animated" data-wow-duration="3s">
 					<div class="stats">
 						<div class="stat">
-							<h3 class="num">167</h3>
+							<h3 class="num">171</h3>
 							<p>HRs hit by participants in 2014</p>
 						</div>
 						<div class="stat">
