--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>2014 Home Run Derby</title>
+		<meta name="title" content="SeatGeek's Guide to the 2014 Home Run Derby">
+		<meta name="description" content="At SeatGeek, we want you to get the most bang for your dollar. This app will show the stadium sections where you have the best chance to catch a home run for the lowest ticket price.">
+		<meta name="keywords" content="home run derby, all star game, target field, mlb, major league baseball, jose bautista, troy tulowitzki, yoenis cespedes, giancarlo stanton, adam jones, yasiel puig, brian dozier, todd frazier, josh donaldson, justin morneau">
+		<title>SeatGeek's Guide to the 2014 Home Run Derby</title>
 		<link rel="shortcut icon" href="https://seatgeek.com/favicon.ico">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/leaflet.css">
@@ -124,7 +127,7 @@
 							<p>HRs hit by participants in 2014</p>
 						</div>
 						<div class="stat">
-							<h3 class="num">130</h3>
+							<h3 class="num">133</h3>
 							<p>catchable HRs at Target Field</p>
 						</div>
 						<div class="stat">
