modify page title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="title" content="SeatGeek's Guide to the 2014 Home Run Derby">
 		<meta name="description" content="At SeatGeek, we want you to get the most bang for your dollar. This app will show the stadium sections where you have the best chance to catch a home run for the lowest ticket price.">
 		<meta name="keywords" content="home run derby, all star game, target field, mlb, major league baseball, jose bautista, troy tulowitzki, yoenis cespedes, giancarlo stanton, adam jones, yasiel puig, brian dozier, todd frazier, josh donaldson, justin morneau">
-		<title>SeatGeek's Guide to the 2014 Home Run Derby</title>
+		<title>SeatGeek's Guide to the Home Run Derby</title>
 		<link rel="shortcut icon" href="https://seatgeek.com/favicon.ico">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/leaflet.css">
