place nav in a container

--- a/index.html
+++ b/index.html
@@ -23,27 +23,29 @@
 			<a href="https://seatgeek.com/" class="logo"></a>
 			<h3 class="title">Guide to the 2014 Home Run Derby</h3>
 		</div>
-		<div class="primary-nav">
-			<ul class="nav-list">
-				<li class="nav-list-item">
-					<a href="#homerun-map">
-						<img class="icon" id="icon-ball" src="./images/ball.png">
-						<span>The Homeruns</span>
-					</a>
-				</li>
-				<li class="nav-list-item">
-					<a href="#player-bios">
-						<img class="icon" id="icon-cap" src="./images/cap.png">
-						<span>The Players</span>
-					</a>
-				</li>
-				<li class="nav-list-item nav-list-last">
-					<a href="#about">
-						<img class="icon" id="icon-about" src="./images/about.png">
-						<span>About</span>
-					</a>
-				</li>
-			</ul>
+		<div class="container-primary-nav">
+			<div class="primary-nav">
+				<ul class="nav-list">
+					<li class="nav-list-item">
+						<a href="#homerun-map">
+							<img class="icon" id="icon-ball" src="./images/ball.png">
+							<span>The Homeruns</span>
+						</a>
+					</li>
+					<li class="nav-list-item">
+						<a href="#player-bios">
+							<img class="icon" id="icon-cap" src="./images/cap.png">
+							<span>The Players</span>
+						</a>
+					</li>
+					<li class="nav-list-item nav-list-last">
+						<a href="#about">
+							<img class="icon" id="icon-about" src="./images/about.png">
+							<span>About</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="container" id="homerun-map">
 			<div class="sub-container">
