--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<a href="https://seatgeek.com/" class="logo"></a>
 			<h3 class="title">Guide to the 2014 Home Run Derby</h3>
 		</div>
+		<div class="tweet-button">
+			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-url="http://seatgeek.com/hrderby" data-text="Check out SeatGeek's interactive infographic for the home run derby">Tweet</a>
+		</div>
 		<div class="container-primary-nav">
 			<div class="primary-nav">
 				<ul class="nav-list">
@@ -47,7 +50,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="container" id="homerun-map">
+		<div class="container-content" id="homerun-map">
 			<div class="sub-container">
 				<h3 class="title">Target Field Stadium Map</h3>
 				<p class="title section-title">click a circle to add or remove a player or click toggle to add or remove them all</p>
@@ -246,5 +249,7 @@
 		<script src="./js/players.js"></script>
 		<script src="./js/paths.js"></script>
 		<script src="./js/main.js"></script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+		</script>
 	</body>
 </html>
