--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						</div>
 					</div>
 					<div class="credit">
-						<p>Home Run data pulled from ESPN's <a href="http://www.hittrackeronline.com/" target="_blank">Home Run Tracker</a></p>
+						<p>Home Run data pulled from ESPN's Home Run Tracker</a></p>
 					</div>
 				</div>
 				<div class="breakdown-container wow fadeInRight animated" data-wow-duration="3s">
